--- a/index.html
+++ b/index.html
@@ -130,7 +130,9 @@
     </div>
 </footer>
 
-<div class="window"></div>
+<div class="window">
+    <form action="" class="window__form"></form>
+</div>
     
 </body>
 </html>
