--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <i class="fal fa-address-book menu__icon"></i>Контакты
            </a></li>
        </ul>
-       <a href="#window" class="avatar">
+       <a href="#modal" class="avatar">
            <img src="img/avatar.jpg" alt="" class="avatar__img">
        </a>
        
@@ -130,13 +130,12 @@
     </div>
 </footer>
 
-<div class="window" id="window">
+<div class="window" id="modal">
     <form action="" class="window__form">
-        <a href="" class="window__close">
+        <a href="#">
             <i class="fal fa-times-circle"></i>
         </a>
     </form>
 </div>
-    
 </body>
 </html>
